--- a/Code/frontend/Employer/addjoboffer.html
+++ b/Code/frontend/Employer/addjoboffer.html
@@ -79,7 +79,7 @@
         });
         
         try {
-            const response = await fetch('/Employer/addJobOffer', {
+            const response = await fetch('/Employer/JobOffer/addJobOffer', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
