--- a/Code/frontend/Candidate/candidate_register.html
+++ b/Code/frontend/Candidate/candidate_register.html
@@ -22,6 +22,10 @@
         <input type="date" id="dateOfBirth" name="dateOfBirth" required><br><br>
         <label for="phone">Phone:</label>
         <input type="text" id="phone" name="phone"><br><br>
+        <label for="state">State:</label>
+        <input type="text" id="state" name="state"><br><br>
+        <label for="country">Country:</label>
+        <input type="text" id="country" name="country"><br><br>
         <label for="address">Address:</label>
         <input type="text" id="address" name="address"><br><br>
         <button type="submit">Register</button>
@@ -42,6 +46,7 @@
                     if (data.loggedIn) {
                         // Redirect to profile page if candidate is already logged in
                         window.location.href = 'candidate_profile.html';
+                        sleep(1000);
                     }
                 } else {
                     console.error('Failed to check if candidate is logged in');
@@ -69,7 +74,9 @@
                         lastName: formData.get('lastName'),
                         dateOfBirth: formData.get('dateOfBirth'),
                         phone: formData.get('phone'),
-                        address: formData.get('address')
+                        address: formData.get('address'),
+                        state: formData.get('state'),
+                        country: formData.get('country')
                     })
                 });
 
@@ -99,6 +106,7 @@
 
                 // Redirect to profile page after successful registration and login
                 window.location.href = 'candidate_profile.html';
+                sleep(1000);
             } catch (error) {
                 console.error('Error registering candidate:', error);
             }
