--- a/Code/frontend/Employer/employer_profile.html
+++ b/Code/frontend/Employer/employer_profile.html
@@ -11,6 +11,7 @@
 
     </div>
     <h3>Actions</h3>
+    <button onclick="viewApplications()">View Applications</button>
     <button onclick="addJobOffer()">Add Job Offer</button>
     <button onclick="changePassword()">Change Password</button>
     <button onclick="changeEmail()">Change Email</button>
@@ -58,6 +59,10 @@
             `;
         }
 
+        async function viewApplications() {
+            window.location.href = 'employer_applications.html';
+        }
+
         function addJobOffer() {
             window.location.href = 'addjoboffer.html';
         }
@@ -98,7 +103,7 @@
                     },
                 });
                 if (response.ok) {
-                    window.location.href = 'employer_login.html'; // Redirect to login page after logout
+                    window.location.href = 'employer_login.html'; 
                 } else {
                     console.error('Logout failed');
                 }
