--- a/Code/frontend/Employer/employer_register.html
+++ b/Code/frontend/Employer/employer_register.html
@@ -40,6 +40,7 @@
                     if (data.loggedIn) {
                         // Redirect to profile page if employer is already logged in
                         window.location.href = 'employer_profile.html';
+                        sleep(1000);
                     }
                 } else {
                     console.error('Failed to check if employer is logged in');
@@ -96,6 +97,7 @@
 
                 // Redirect to profile page after successful registration and login
                 window.location.href = 'employer_profile.html';
+                sleep(1000);
             } catch (error) {
                 console.error('Error registering employer:', error);
             }
